// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI qnm list should --disable-colors 1`] = `
"[4manotherDependency[24m
└── 1.0.0

[4mdependency1[24m
└── 1.0.0

[4mdependency2[24m
└── 1.0.0

[4mdevDependency1[24m
└── 1.0.0

[4mdevDependency2[24m
└── 1.0.0

[4mdep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └── 1.0.0
├─┬ [90mdependency1[39m
│ └── 1.0.0
├─┬ [90mdependency2[39m
│ └── 1.0.0
├─┬ [90mdevDependency1[39m
│ └── 1.0.0
└─┬ [90mdevDependency2[39m
  └── 1.0.0

[4mdep-of-dep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdependency2[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdevDependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
└─┬ [90mdevDependency2[39m
  └─┬ [90mdep-of-dep[39m
    └── 1.0.0

"
`;

exports[`CLI qnm list should list dependencies in a yarn installed package and show "why" information 1`] = `
"[4mimport-cwd[24m
└── [37m3.0.0[39m

[4mimport-from[24m
└── [37m3.0.0[39m [33m(import-cwd)[39m

[4mresolve-from[24m
└── [37m5.0.0[39m [33m(import-from)[39m

"
`;

exports[`CLI qnm list should show all modules in node_modules directory 1`] = `
"[4m@scope/test[24m
└── [37m1.0.0[39m

[4manother[24m
└── [37m1.0.0[39m

[4mtest[24m
├── [37m1.0.0[39m
└─┬ [90manother[39m
  └── [37m1.0.0[39m

"
`;

exports[`CLI qnm list should show modules mentioned in package.json 1`] = `
"[4mdependency1[24m
└── [37m1.0.0[39m

[4mdependency2[24m
└── [37m1.0.0[39m

[4mdevDependency1[24m
└── [37m1.0.0[39m

[4mdevDependency2[24m
└── [37m1.0.0[39m

"
`;

exports[`CLI qnm with no arguments should add dependents information when using the --why option 1`] = `
"[4mtest[24m
└── [37m1.0.0[39m [33m(devDependencies, npm install test)[39m

"
`;

exports[`CLI qnm with no arguments should add dependents information when using the --why option on yarn installed package 1`] = `
"[4mimport-from[24m
└── [37m3.0.0[39m [33m(import-cwd)[39m

"
`;

exports[`CLI qnm with no arguments should add dependents information when using thw -w option 1`] = `
"[4mtest[24m
└── [37m1.0.0[39m [33m(devDependencies, npm install test)[39m

"
`;

exports[`CLI qnm with no arguments should show get matchs when using the match command 1`] = `
"[4m[35mte[39mst[24m
└── [37m1.0.0[39m

"
`;

exports[`CLI qnm with no arguments should show the version on a single module when called with a string 1`] = `
"[4mtest[24m
└── [37m1.0.0[39m

"
`;

exports[`CLI qnm with no arguments should work in monorepo and print subpackages modules 1`] = `
"[4mpackage-foo[24m
└── [37m1.0.0[39m

[1mpackage-a[22m
└─┬ [4mpackage-foo[24m
  └── [38;2;157;229;247m2.0.0[39m

"
`;
